# davinci-resolve-scripts

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
presets/: broadcast_presets.json
scripts/: CLAUDE.md  add_exif_frame_dv.py  add_exif_frame_dv_lite.py  copy_project_settings_dv.py  copy_project_settings_dv_lite.py  debug_project_settings.py  install.py  set_broadcast_format_dv.py
